# scirpy

./: .buildinfo  .cruft.json  .editorconfig  .gitattributes  .gitignore  .gitignore.rej  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.md.rej  CONTRIBUTING.md  LICENSE  README.md  README.md.rej  README.rst  basic_tcr.py  biome.jsonc  index.html  latest  main.nf  nextflow.config  pilot_project_tcr_analysis.py  pyproject.toml  pyproject.toml.rej  runTCR.sge  t
.codeboarding/: Core_Utilities.md  I_O_Data_Management.md  Immune_Receptor_Distance_Calculation.md  Preprocessing.md  Repertoire_Analysis_Tools.md  Visualization.md  on_boarding.md
.conda/: meta.yaml  recipe.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yaml  clean-gh-pages.yml  conda.yaml  conda.yml  docs.yml  pythonpublish.yml  release.yaml  release.yaml.rej  test-gpu.yaml  test-tutorials.yaml  test.yaml  test.yml  tutorials.yml
conf/: sge.config
develop/: .buildinfo  api.html  data-structure.html  developer_docs.html  genindex.html  glossary.html  index.html  ir-biology.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html  usage-principles.html  versions.html  zzz_bibliography.html
develop/_sources/: index.rst.txt
develop/tutorials/: tutorial_3k_tcr.html  tutorial_io.html  tutorial_io.ipynb
docs/: .gitignore  Makefile  api.md  api.rst  bibliography.rst  conf.py  conf.py.rej  contributing.md  contributing.md.rej  data-structure.rst  developer_docs.rst  features.rst  glossary.rst  index.md  index.md.rej  index.rst  ir-biology.rst  references.bib  references.rst  requirements.txt  tcr-biology.rst  tutorials.rst  usage-principles.rst  versions.rst  zzz_bibliography.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/extensions/: function_images.py  github_links.py  param_police.py  sphinxcontrib-rawrole.py  typed_returns.py  typed_returns.py.rej
docs/notebooks/: example.ipynb
docs/tutorials/: .gitignore  .jupytext  check_imbalance.md  check_repertoire_overlap.md  covid_case_study.ipynb  jupytext.toml  large-datasets.md  tutorial_3k_tcr.md  tutorial_5k_bcr.ipynb  tutorial_io.ipynb  tutorial_io.md
envs/: tcr.yml  tcrpy2.yml  tcrpy3.yml  tcrpy_r.yml
lib/DiversitySeq/: DESCRIPTION  NAMESPACE
notebooks/: clonotype_freqs.Rmd  kidera_distances.Rmd  vdj_sankey.Rmd
sample_data_for_tsne/: a_tsne.tsv  a_umap.tsv  celltypes.txt  genelist.txt  genelist_old.txt  tsne.csv  umap.csv
scTCRpy/: __init__.py  distanceMetrics.py  layoutExp.py  parseTCR.py  reportHTML.py  report_template.html  resultData.py  talkR.py
scirpy/: __init__.py  _compat.py  _metadata.py
scirpy/_get/: __init__.py
scirpy/_io/: __init__.py  _datastructures.py  _io.py
scirpy/_plotting/: __init__.py  _base.py  _cdr_convergence.py  _clip_and_count.py  _clonal_expansion.py  _clonotype_imbalance.py  _clonotype_modularity.py  _clonotypes.py  _diversity.py  _group_abundance.py  _repertoire_overlap.py  _spectratype.py  _styling.py  _vdj_usage.py  base.py  styling.py
scirpy/_preprocessing/: __init__.py  _merge_adata.py  _tcr_dist.py
scirpy/_tools/: __init__.py  _chain_pairing.py  _chain_qc.py  _clip_and_count.py  _clonal_expansion.py  _clonotype_imbalance.py  _clonotype_modularity.py  _clonotypes.py  _convergence.py  _diversity.py  _group_abundance.py  _repertoire_overlap.py  _spectratype.py  _vdj_usage.py
scirpy/_util/: __init__.py  _graph.py  _multiprocessing.py
scirpy/datasets/: __init__.py
scirpy/get/: __init__.py
scirpy/io/: __init__.py  _common_doc.py  _convert_anndata.py  _datastructures.py  _io.py  _io_bdrhapsody.py  _legacy.py  _util.py
scirpy/ir_dist/: __init__.py  _clonotype_neighbors.py  _util.py  clonotypes.py  metrics.py
scirpy/pl/: __init__.py  _cdr_convergence.py  _clonal_expansion.py  _clonotype_imbalance.py  _clonotype_modularity.py  _clonotypes.py  _diversity.py  _group_abundance.py  _repertoire_overlap.py  _spectratype.py  _vdj_usage.py  base.py  styling.py
scirpy/pp/: __init__.py  _index_chains.py  _merge_adata.py
scirpy/tcr_dist/: __init__.py
scirpy/tests/: fixtures.py  test_clonotypes.py  test_datasets.py  test_get.py  test_io.py  test_ir_dist.py  test_ir_dist_metrics.py  test_ir_dist_util.py  test_ir_query.py  test_plotting.py  test_plotting_base.py  test_preprocessing.py  test_tcr_dist.py  test_tools.py  test_util.py  test_workflow.py  util.py
scirpy/tl/: __init__.py  _chain_qc.py  _clonal_expansion.py  _clonotype_imbalance.py  _clonotype_modularity.py  _clonotypes.py  _convergence.py  _diversity.py  _group_abundance.py  _ir_query.py  _query_epitopes.py  _repertoire_overlap.py  _spectratype.py
scirpy/util/: __init__.py  _multiprocessing.py  _negative_binomial.py  graph.py
sctcrpy/: __init__.py  _datastructures.py  _io.py  _plotting.py  _preprocessing.py  _tools.py  _util.py  cli.py  datasets.py  index.py  legacy.py  pandoc.py  papermill.py  rmd.py  util.py
sctcrpy/_io/: _datastructures.py  _io.py
sctcrpy/_plotting/: __init__.py  _base.py  _cdr_convergence.py  _clip_and_count.py  _clonotypes.py  _diversity.py  _group_abundance.py  _plots.py  _spectratype.py  _styling.py  _tcr_dist.py  _vdj_usage.py
sctcrpy/_preprocessing/: _tcr_dist.py
sctcrpy/_tools/: __init__.py  _cdr_convergence.py  _clip_and_count.py  _clonal_expansion.py  _clonotype_definition.py  _clonotypes.py  _diversity.py  _group_abundance.py  _spectratype.py  _tcr_dist.py  _tools.py  _vdj_usage.py
sctcrpy/_util/: __init__.py  _graph.py
sctcrpy/datasets/: __init__.py
sctcrpy/io/: _datastructures.py  _io.py
src/scirpy/: __init__.py  (+1 more)
tests/: _util.py  conftest.py  fixtures.py  test_basic.py  test_cli.py  test_clonotypes.py  test_engines.py  test_index.py  test_io.py  test_pandoc.py  test_papermill.py  test_plotting.py  test_plotting_base.py  test_rmd.py  test_tcr_dist.py  test_tools.py  test_util.py
tutorial/: VDJ_usage.ipynb  demo.py
versions/: versions.json
(+749 files in other folders)
